# sql-tui

./: .sqruff  CLAUDE.md  Cargo.toml  LICENSE  README.md  atui  cashgaze.sqlite  install.sh  run.sh  setup.sh  test_formatter.rs
locales/: en.yml  pt-BR.yml
src/: config.rs  lib.rs  main.rs
src/app/: actions.rs  export.rs  handlers.rs  mod.rs  state.rs  undo.rs
src/app/editor/: mod.rs  motions.rs  operations.rs  text_objects.rs
src/app/handlers/: connection.rs  history_handler.rs  mod.rs  query_editor.rs  results.rs  schema.rs
src/completion/: candidates.rs  context.rs  mod.rs
src/db/: connection.rs  driver.rs  mod.rs  query.rs  schema.rs  sqlite.rs  sqlserver.rs
src/sql/: formatter.rs  mod.rs
src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
src/ui/widgets/: completion_popup.rs  connection_modal.rs  helpers.rs  history_list.rs  mod.rs  query_editor.rs  results_table.rs  schema_tree.rs
