[package]
name = "sql_tui"
version = "1.0.0"
edition = "2021"
authors = ["Alrajhi Bank IT Team"]
description = "High-performance SQL Server Terminal UI"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# SQL Server
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "tds73"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Async
futures = "0.3"
async-trait = "0.1"

# Data handling
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment
dotenvy = "0.15"

# Utilities
unicode-width = "0.1"
textwrap = "0.16"
dirs = "5.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Clipboard
arboard = "3.4"

# Internationalization
rust-i18n = "3"
sys-locale = "0.3"

# CSV export
csv = "1.3"

# SQL formatter
sqlformat = "0.3"

[[bin]]
name = "test_formatter"
path = "test_formatter.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
